<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyRecipeManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">Please Enter Your First Name: </string>
    <string name="last_name">Please Enter Your Last Name: </string>
    <string name="create_password">Create New Password: </string>
    <string name="confirm_password">Confirm Password: </string>
    <string name="submit">Submit</string>
    <string name="user_name">Create Username: </string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dessert">Desserts</string>
    <string name="side_dishes">Side Dishes</string>
    <string name="appetizer">Appetizers</string>
    <string name="title_activity_category_screen">CategoryScreen</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="category_label">Categories</string>
    <string name="recipe_label">Recipes</string>
    <string name="add_category">New Category</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

</resources>
