<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">
  
   		
    <TextView 
        android:layout_gravity="center"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textSize="30sp"
        android:text="@string/add_category"   
    />
    
    <EditText
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:inputType="text">
	</EditText>
	
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
   		android:gravity="center">
   		
   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button" 
    />
   
   <Button 
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
    />
   
</LinearLayout>
    
</LinearLayout>

